force-app/main/default/objects/Portal_Case_Collaborator__c/Portal_Case_Collaborator__c.object-meta.xml
<CustomObject>
    <description>Holds collaborators for cases</description>
    <label>Portal Case Collaborator</label>
    <nameField>
        <label>Case Collaborator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Case Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>