force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <description>Case business impact</description>
    <formula>TEXT(Case__r.Priority)</formula>
    <label>Business Impact</label>
    <type>Text</type>
</CustomField>