force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>The case being collaborated on</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Portal Case Collaborators</relationshipLabel>
    <relationshipName>Portal_Case_Collaborators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>