force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Name__c</fullName>
    <description>Case Contact&apos;s full name</description>
    <formula>Case__r.Contact_Name__c</formula>
    <label>Case Contact Name</label>
    <type>Text</type>
</CustomField>