force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Related Case&apos;s Case Number</description>
    <formula>Case__r.CaseNumber</formula>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>