force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Case_Solution__c.field-meta.xml
<CustomField>
    <fullName>Case_Solution__c</fullName>
    <description>The parent case solution field</description>
    <label>Case Solution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>