force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The related contact for this collaboration</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Case Collaborators</relationshipLabel>
    <relationshipName>Portal_Case_Collaborators</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>