force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Case description (trimmed)</description>
    <formula>Case__r.Description_Trimmed__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>