force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Latest_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comment__c</fullName>
    <description>The latest comment on the parent case</description>
    <label>Latest Case Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>