force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <description>The case related product</description>
    <formula>TEXT(Case__r.RelatedProduct__c)</formula>
    <label>Related Product</label>
    <type>Text</type>
</CustomField>