force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>The case severity</description>
    <formula>TEXT(Case__r.Current_Severity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity</label>
    <type>Text</type>
</CustomField>