force-app/main/default/objects/Portal_Case_Collaborator__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Case subject</description>
    <formula>Case__r.Subject</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>